Add wildcard support for CORS origins to handle dynamic Vercel URLs

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,4 +5,4 @@ DB_PASSWORD=password
 DB_NAME=db_name
 JWT_SECRET=your_secret_key_here
 PORT=8080
-ALLOWED_ORIGINS=http://localhost:3000,https://larissasthefanny-plena-q963l810o-larissasthefannys-projects.vercel.app
+ALLOWED_ORIGINS=http://localhost:3000,https://larissasthefanny-plena-*.vercel.app
