Fix CORS wildcard pattern matching for Vercel domains

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=plena_password
 DB_NAME=plena_db
 JWT_SECRET=secret_key_plena_app_2025
 PORT=8080
+ALLOWED_ORIGINS=http://localhost:3000,https://*.vercel.app
